Stopped mid word wrapping of links on the queue pages when they take up more than the browser width.

--- a/main/interfaces/Classic/templates/static/stylesheets/default.css
+++ b/main/interfaces/Classic/templates/static/stylesheets/default.css
@@ -48,6 +48,8 @@ fieldset.EntryFieldSet {
 	text-decoration: none;
 	padding-left: 12px;
     padding-right: 12px;
+    /*Stop mid-word wrapping to next link */
+    display: inline-block;
     
 }
 
